# swiggy_time_delivery_prediction

./: .gitignore  Makefile  README.md  app.py  cls  dvc.yaml  params.yaml  pyproject.toml  requirements.txt  run_information.json
models/: power_transformer.joblib  preprocessor.joblib
notebooks/: Food_Delivery_Exp_1_drop_vs_impute.ipynb  Food_Delivery_Exp_2_missing_indicator.ipynb  Food_Delivery_Model_Selection.ipynb
src/data/: data_preparation.py
src/models/: evaluation.py  register_model.py
