[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "swiggy_time_delivery_prediction"
version = "0.0.1"
description = "This project predicts the  delivery time for a swiggy order in minutes"
authors = [
  { name = "Vedprakash" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["swiggy_time_delivery_prediction"]
include = ["pyproject.toml", "swiggy_time_delivery_prediction/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["swiggy_time_delivery_prediction"]
force-sort-within-sections = true

